--- a/package.json
+++ b/package.json
@@ -13,8 +13,16 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs":{
+  "bugs": {
     "url": "https://github.com/Aniket762/codespace-auth-temp/issues"
   },
-  "homepage": "https://github.com/Aniket762/codespace-auth-temp#readme"
+  "homepage": "https://github.com/Aniket762/codespace-auth-temp#readme",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "mogoose": "^0.0.1-security"
+  }
 }
