--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "mogoose": "^0.0.1-security"
+    mogoose": "^0.0.1-security"
   }
 }
